[metadata]
name = reolink_baichuan
version = 0.0.1a
author = xannor
author_email = 
description = Reolink camera (BaiChuan protocol)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xannor/reolink_baichuan
project_urls =
    Bug Tracker = https://github.com/xannor/reolink_baichuan/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = reolink_baichuan
packages = find:
python_requires = >=3.8

[options.packages.find]
where = reolink_baichuan
